--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link
-      href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700;900&display=swap"
       rel="stylesheet"
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
